<resources>
    <string name="app_name">Hotel Management</string>


    <string name="Hello">Hello,</string>
    <string name="desAvatar">Avatar Image</string>
    <string name="title_activity_room_management">room_management</string>


    <string name="MainMeals">Main Meals</string>
    <string name="Pastry_Shop">Pastry Shop</string>
    <string name="Lobby_bar">Lobby Bar</string>
    <string name="available_times">Available Times</string>
    <string name="food_type">Food Type</string>
    <string name="price">Price</string>
    <string name="regular">Regular -</string>
    <string name="large">Large -</string>
    <string name="end">*******</string>
    <string name="dinner">Dinner</string>
    <string name="breakfast">Breakfast</string>
    <string name="chinese_special_noodles">Chinese Special Noodles</string>
    <string name="indian_rice_and_curry">Indian Rice And Curry</string>
    <string name="_350_00">350.00/-</string>
    <string name="lunch">Lunch</string>
    <string name="_550_00">550.00/-</string>
    <string name="thai_sea_food_rice">Thai Sea food Rice</string>
    <string name="nasi_goreng_dragon_pack">Nasi Goreng Dragon Pack</string>
    <string name="_799_99">799.99/-</string>
    <string name="paella_persian_saffron">Paella Persian Saffron</string>
    <string name="_999_99">999.99/-</string>
    <string name="lamb_dum_biryani">Lamb Dum Biryani</string>
    <string name="_699_99">699.99/-</string>
    <string name="_299_99">299.99/-</string>
    <string name="_150_00">150.00/-</string>
    <string name="pastry">Pastry</string>
    <string name="meal_01">Meal-01</string>
    <string name="chinese_special_noodloes">Chinese Special Noodloes</string>
    <string name="enter_meal_name">Enter Meal Name</string>
    <string name="enter_meal_type">Enter Meal Type</string>
    <string name="enter_normal_price">Enter Normal Price</string>
    <string name="enter_large_price">Enter Large Price</string>
    <string name="filo_pastry">Filo Pastry</string>
    <string name="egg_york_pastry">Egg York Pastry</string>
    <string name="_250_00">250.00/-</string>
    <string name="_99_00">99.00/-</string>
    <string name="drinks">Drinks</string>
    <string name="heart_pizza">Heart Pizza</string>
    <string name="_1999_99">1999.99/-</string>
    <string name="thanduri_pizza">Thanduri Pizza</string>
    <string name="_2250_00">2250.00/-</string>
    <string name="bbq_pizza">BBQ Pizza</string>
    <string name="_3250_00">3250.00/-</string>
    <string name="fruit_juices">Fruit Juices</string>
    <string name="soft_drinks">Soft Drinks</string>
    <string name="update_details">Update Details</string>
    <string name="update">Update</string>
    <string name="chinese">Chinese</string>
    <string name="are_you_want_to_delete_all">Are You Want To delete All</string>
    <string name="pizza">Pizza</string>
    <string name="meal_management">Meal Management</string>

    <string name="events">EVENTS</string>
    <string name="weddings">WEDDINGS</string>
    <string name="calm">Calm</string>
    <string name="you_will_travel_by">YOU WILL TRAVEL BY ?</string>
    <string name="sigiriya">SIGIRIYA</string>
    <string name="colombo">COLOMBO</string>
    <string name="kandy">KANDY</string>
    <string name="jaffna">JAFFNA</string>
    <string name="travel_place">Travel place</string>
    <string name="mini_car">MINI CAR</string>
    <string name="taxi">TAXI</string>
    <string name="car">CAR</string>
    <string name="payment_details">PAYMENT DETAILS</string>
    <string name="delete">Delete</string>
    <string name="customer_payment_details">Customer payment details</string>
    <string name="admin_home">Admin Home</string>
    <string name="vehicle_manage">Vehicle Manage</string>
    <string name="add">Add</string>
    <string name="view_vehicle_types">View Vehicle Types</string>
    <string name="admin_home2">Admin Home</string>
    <string name="travel_options">Travel Options</string>
    <string name="travel_home">Travel Home</string>
    <string name="registered_vehicles">Registered Vehicles</string>
    <string name="all_vehicle_types">All Vehicle Types</string>
    <string name="remove">Remove</string>
    <string name="location_manage">Location Manage</string>
    <string name="enter_location_details">Enter Location Details</string>
    <string name="blue_dragon_hotel">Blue Dragon Hotel</string>
    <string name="travel_options3">travel_options3</string>
    <string name="please_enter_meal_types">please_enter_meal_types</string>
    <string name="travel_home_travel_admin_home">Travel Home ,Travel Admin Home</string>
    <string name="travel_option4">Travel Option</string>
    <string name="enter_price">Enter Price</string>
    <string name="short_eat_management">Short Eat Management</string>


</resources>
