<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="500dp"
    android:layout_gravity="center"
android:orientation="vertical"
tools:context=".MM_Main_Meal_View_PU"
android:background="#02081D">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_marginTop="10dp"
            android:id="@+id/image1"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            app:civ_border_color="#fff"
            app:civ_border_width="2dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/mm_noodles"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#fff"
            android:layout_marginBottom="2dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"

            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center">

            <ImageView

                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/mm_ic_room_service_black_24dp"


                />

            <TextView
                android:id="@+id/mealName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textColor="#fff"
                android:textSize="20dp"
                android:textStyle="bold|italic" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/mm_ic_play_arrow_black_24dp"


                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="#fff"
                android:textSize="17dp"
                android:text="@string/available_times"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >

            <CheckedTextView
                android:id="@+id/brakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/breakfast"
                android:textColor="#fff"
                android:layout_marginRight="10dp"

                />

            <CheckedTextView
                android:id="@+id/lunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lunch"
                android:textColor="#fff"
                android:layout_marginRight="10dp"

                />

            <CheckedTextView
                android:id="@+id/dinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dinner"
                android:textColor="#fff"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/mm_ic_play_arrow_black_24dp"


                />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="#fff"

                android:textSize="17dp"
                android:text="@string/food_type"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:id="@+id/foodType"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="#FCF158"
                android:textSize="17dp"

                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginRight="10dp"
                    android:src="@drawable/mm_ic_play_arrow_black_24dp"


                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="#fff"
                android:textSize="17dp"
                android:text="@string/price"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/regular"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="#FCF158"
                android:textSize="17dp"
                android:text="Regular Price - RS : "
                />

            <TextView
                android:id="@+id/regularPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#FF0E00"
                android:textSize="17dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:id="@+id/Large"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="#FCF158"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="17dp"
                android:text="Large Price - RS : "
                />
            <TextView
                android:id="@+id/largePrice"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="20dp"
                android:textColor="#FFFF0E00"
                android:textSize="17dp"
                android:text="350.00/-"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >

            <TextView

                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textColor="#fff"
                android:textSize="17dp"
                android:text="@string/end"
                />
        </LinearLayout>



    </LinearLayout>

</ScrollView>



</LinearLayout>