<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/home"
tools:context=".Dininig_Home"

    >

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:fontFamily="sans-serif-condensed"
    android:shadowDx="0"
    android:shadowDy="0"
    android:shadowRadius="0"
    android:text="@string/header"
    android:textAlignment="center"
    android:textColor="#ffffff"
    android:textSize="50sp"
    android:textStyle="bold|italic"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.127" />

<Button
    android:id="@+id/btn1"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:alpha="0.9"
    android:background="@drawable/custom_button"
    android:paddingLeft="10dp"
    android:paddingTop="8dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:text="@string/MainMeals"
    android:textAllCaps="false"
    android:textColor="#ffffff"
    android:textSize="26dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/btn2"
    app:layout_constraintHorizontal_bias="0.5"

    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.873" />

<Button
    android:id="@+id/btn2"
    android:layout_width="0dp"
    android:layout_height="50dp"
    android:layout_marginStart="8dp"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:alpha="0.9"
    android:background="@drawable/custom_button"
    android:paddingLeft="10dp"
    android:paddingTop="8dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:text="@string/Pastry_Shop"
    android:textAllCaps="false"
    android:textColor="@android:color/white"
    android:textSize="26dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/btn1"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.873" />


<Button
    android:id="@+id/btn3"
    android:layout_width="191dp"
    android:layout_height="50dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="8dp"
    android:alpha="0.9"
    android:background="@drawable/custom_button"
    android:paddingLeft="10dp"
    android:paddingTop="8dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:text="@string/Lobby_bar"
    android:textAllCaps="false"
    android:textColor="@android:color/white"
    android:textSize="26dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.387" />

</androidx.constraintlayout.widget.ConstraintLayout>